tests/sumo/devices/rerouting/assignment/errors/disconnect_via_ignore/errors.sumo
Warning: No connection between edge 'end' and edge 'middle' found.
Warning: No route for vehicle '0' found.
Warning: Teleporting vehicle '0'; waited too long (wrong lane), lane='left_0', time=345.00.
Warning: Vehicle '0' ends teleporting on edge 'end', time=345.00.
Warning: Teleporting vehicle '0'; waited too long (wrong lane), lane='end_0', time=667.00.
Warning: Vehicle '0' ends teleporting on edge 'middle', time=667.00.
